--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "builds": [
       {
         "src": "shopnify/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config":{"runtime":"python3.11.4"}
       }
     ],
     "routes": [
