--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ asgiref==3.7.2
 Django==4.2.4
 django-cors-headers==4.2.0
 Pillow==10.0.0
-psycopg==3.1.12
-psycopg2==2.9.8
+psycopg2-binary~=2.9.6
+psycopg2==2.9.6
 pydantic==2.3.0
 pydantic_core==2.6.3
 sqlparse==0.4.4
