--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.2.4
 django-cors-headers==4.2.0
 Pillow==10.0.0
 psycopg2-binary~=2.9.6
+psycopg2==2.9.6
 pydantic==2.3.0
 pydantic_core==2.6.3
 sqlparse==0.4.4
