--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ annotated-types==0.5.0
 asgiref==3.7.2
 Django==4.2.4
 django-cors-headers==4.2.0
-Pillow
-psycopg2-binary~=2.9.6
+pillow==10.3.0
+psycopg2-binary==2.9.9
 pydantic==2.3.0
 pydantic_core==2.6.3
 sqlparse==0.4.4
